# cosmologix

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  ReadMe.md  pylintrc  pyproject.toml
.github/workflows/: draft-pdf.yml
cosmologix/: __init__.py  acoustic_scale.py  background.py  cli.py  cli_tools.py  contours.py  densities.py  display.py  distances.py  fitter.py  hli.py  interpolation.py  likelihoods.py  neutrinos.py  parameters.py  polynomial_interpolation.py  radiation.py  tools.py
doc/: accuracy_plots.py  conf.py  index.rst  paper.bib  paper.md  speed_plots.py  validation_paper.md
doc/book/: _config.yml  _toc.yml  about.md  advanced.ipynb  advanced.md  api.rst  basic.ipynb  computation.md  contributing.md  home.md  numerical_results.md  release.md
edriscosmo/: background.py  tools.py
examples/: accuracy_plots.py  bao.py  densities.py  distances.py  example_contours.py  features.py  speed_plots.py
test/: test_distances.py
tests/: conftest.py  test_acoustic_scale.py  test_bao_distances.py  test_cli.py  test_contours.py  test_densities.py  test_distances.py  test_fitter.py  test_interpolation.py  test_likelihoods.py  test_neutrinos.py  test_tools.py  test_volume.py
