[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmologix"
version = "0.9.8"
description = "Cosmological distance computations in FLRW universe using JAX"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Marc Betoule", email = "marc.betoule@lpnhe.in2p3.fr"},
    {name = "Jérémy Neveu", email = "jeremy.neveu@lpnhe.in2p3.fr"},
    {name = "Dylan Kuhn", email = "dylan.kuhn@lpnhe.in2p3.fr"},
    {name = "Maude Le Jeune", email = "maude.lejeune@apc.in2p3.fr"},
    {name = "Mathieu Bernard", email = "mathieu.bernard@lpnhe.in2p3.fr"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "jax>=0.5.0",
    "jaxlib>=0.5.0",
    "numpy>=2.3",
    "matplotlib>=3.4.0",  # Optional, for examples and plotting
    "requests",
    "tqdm",
    "astropy", # for pyfits and tests
    "typer",
    "asdf", # to save in asdf format
    "zstandard", # for file compression
]

[project.scripts]
cosmologix = "cosmologix.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov",  # for coverage reports
    "pyccl",
    "pyyaml",
    "black",
    "scipy",
    "camb",
    "jax_cosmo",
    "setuptools<82.0.0",  # pkg_resources (needed by jax_cosmo) is deprecated and removed from setuptools>=82
    "cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo"
]
[project.urls]
"Source Code" = "https://gitlab.in2p3.fr/lemaitre/cosmologix"
"Bug Tracker" = "https://gitlab.in2p3.fr/lemaitre/cosmologix/-/issues"

[tool.setuptools]
packages = ["cosmologix"]

#[tool.setuptools.package-data]
#"cosmologix" = ["*.npy", "*.txt"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = false
allow_redefinition = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: mark a test as slow-running (skipped by default)",
]
addopts = [
  '-m', "not slow",
  "--cov=cosmologix",
  "--cov-report=term-missing",
  "-p no:astropy",
]
